bridge/base/0-course-enrollment-namespace.yaml
#! 0-course-enrollment-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: course-enrollment
    labels:
        com.docker.compose.project: course-enrollment
