bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: course-enrollment
    labels:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: course-enrollment
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: course-enrollment
                com.docker.compose.service: app
                com.docker.compose.network.course-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: course-enrollment-app
                  image: course-enrollment-app
                  imagePullPolicy: IfNotPresent
                  workingDir: /app
                  ports:
                    - name: app-9000
                      containerPort: 9000
                  volumeMounts:
                    - name: app
                      mountPath: /app
                    - name: app-uploads
                      mountPath: /app/uploads
            volumes:
                - name: app
                  hostPath:
                    path: C:\xampp\htdocs\course-enrollment
                - name: app-uploads
                  hostPath:
                    path: C:\xampp\htdocs\course-enrollment\uploads
