bridge/base/nginx-deployment.yaml
#! nginx-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    namespace: course-enrollment
    labels:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: course-enrollment
            com.docker.compose.service: nginx
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: course-enrollment
                com.docker.compose.service: nginx
                com.docker.compose.network.course-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: course-enrollment-nginx
                  image: nginx:alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['wget --quiet --tries=1 --spider http://localhost/index.php']
                    periodSeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: nginx-80
                      containerPort: 80
                    - name: nginx-443
                      containerPort: 443
                  volumeMounts:
                    - name: app
                      mountPath: /app
                    - name: etc-nginx-conf-d-default-conf
                      mountPath: /etc/nginx/conf.d/default.conf
                      readOnly: true
            volumes:
                - name: app
                  hostPath:
                    path: C:\xampp\htdocs\course-enrollment
                - name: etc-nginx-conf-d-default-conf
                  hostPath:
                    path: C:\xampp\htdocs\course-enrollment\nginx.conf
                  readOnly: true
