bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: course-enrollment
    labels:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: app
    ports:
        - name: app-9000
          port: 9000
          targetPort: app-9000
