bridge/base/db-service.yaml
# check if there is at least one published port

#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: course-enrollment
    labels:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: db
    ports:
        - name: db-3306
          port: 3306
          protocol: TCP
          targetPort: db-3306

# check if there is at least one published port
