bridge/base/nginx-service.yaml
#! nginx-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nginx-published
    namespace: course-enrollment
    labels:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: nginx
spec:
    selector:
        com.docker.compose.project: course-enrollment
        com.docker.compose.service: nginx
    ports:
        - name: nginx-8080
          port: 8080
          protocol: TCP
          targetPort: nginx-80
        - name: nginx-8443
          port: 8443
          protocol: TCP
          targetPort: nginx-443
