bridge/base/course-network-network-policy.yaml
#! course-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: course-network-network-policy
    namespace: course-enrollment
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.course-network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.course-network: "true"
